Fix: align items in the footer div vertically in the middle

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ footer {
 footer div {
     flex: 1;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     padding: 1rem 5rem;
 }
 
